@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#5410] Add lock_ttl to System Settings for controlling ttl for resource locks
 - [#6575] Ensure that downloads of packages work behind proxies if allow_url_fopen is on
 - [#4879] Add language selector to login page
 - [#6826] Add activate/deactivate to context menu for Plugins in tree
